syntax = "proto3";

package pb_channel;

option go_package = "x";

import "global.proto";

message AvatarAddParam {
    uint32 channel_id = 1;
}

message AvatarAddResponse {}

message AvatarDeleteParam {
    uint32 channel_id = 1;
}

message AvatarDeleteResponse {}

message AvatarGetListParam {
    uint32 channel_id = 1;
}

message AvatarGetListResponse {}

message SendMessageParam {
    uint32 channel_id = 1;
}

message SendMessageResponse {

}

message EditMessageParam {
    uint32 channel_id = 1;
}

message EditMessageResponse {

}

message PinMessageParam {
    uint32 channel_id = 1;
}

message PinMessageResponse {

}

message UnPinMessageParam {
    uint32 channel_id = 1;
}

message UnPinMessageResponse {

}

message DeleteMessageParam {
    uint32 channel_id = 1;
}

message DeleteMessageResponse {

}

message SetDraftParam {
    uint32 channel_id = 1;
}

message SetDraftResponse {

}

service RPC_Channel {
    //rpc  (Param) returns (Response);

    // CrDU
    rpc CreateChannel (CreateChannelParam) returns (CreateChannelResponse);
    rpc EditChannel (EditChannelParam) returns (EditChannelResponse);
    rpc DeleteChannel (DeleteChannelParam) returns (DeleteChannelResponse);

    // Author
    rpc AddAuthor (AddAuthorParam) returns (AddAuthorResponse);
    rpc ChangeAuthorPermission (ChangeAuthorPermissionParam) returns (ChangeAuthorPermissionResponse);
    rpc RemoveAuthor (RemoveAuthorParam) returns (RemoveAuthorResponse);

    // Follow
    rpc Follow (FollowChannelParam) returns (FollowChannelResponse);
    rpc UnFollow (UnFollowChannelParam) returns (UnFollowChannelResponse);
    rpc RemoveFollowers (RemoveFollowersParam) returns (RemoveFollowersResponse);

    // Subscribe
    rpc Subscribe (SubscribeParam) returns (SubscribeResponse);
    rpc UnSubscribe (UnSubscribeParam) returns (UnSubscribeResponse);
    rpc RemoveSubscribers (RemoveSubscribersParam) returns (RemoveSubscribersResponse);

    // Privacy
    rpc ChangePrivacy (ChangePrivacyParam) returns (ChangePrivacyResponse);
    rpc ChangeDefaultPermission (ChangeDefaultPermissionParam) returns (ChangeDefaultPermissionResponse);
    rpc RevokeLink (RevokeLinkParam) returns (RevokeLinkResponse);
    rpc ChangeUsername (ChangeUsernameParam) returns (ChangeUsernameResponse);
    rpc BlockChannel (BlockChannelParam) returns (BlockChannelResponse);

    // Messages
    rpc SendMessage (SendMessageParam) returns (SendMessageResponse);
    rpc EditMessage (EditMessageParam) returns (EditMessageResponse);
    rpc PinMessage (PinMessageParam) returns (PinMessageResponse);
    rpc UnPinMessage (UnPinMessageParam) returns (UnPinMessageResponse);
    rpc DeleteMessage (DeleteMessageParam) returns (DeleteMessageResponse); // remove?
    rpc DeleteMessages (DeleteMessagesParam) returns (DeleteMessagesResponse);
    rpc ClearHistory (ClearHistoryParam) returns (ClearHistoryResponse);

    // Settings
    //rpc  (Param) returns (Response);


    // Others
    rpc AvatarAdd (AvatarAddParam) returns (AvatarAddResponse);
    rpc AvatarChange (AvatarChangeParam) returns (AvatarChangeResponse); // remove?
    rpc AvatarDelete (AvatarDeleteParam) returns (AvatarDeleteResponse);
    rpc AvatarGetList (AvatarGetListParam) returns (AvatarGetListResponse); // view?
    rpc SendDoingAction (SendDoingActionParam) returns (SendDoingActionResponse);
    rpc ReportChannel (ReportChannelParam) returns (ReportChannelResponse);
    rpc ReportMessage (ReportMessageParam) returns (ReportMessageResponse);

    // Views
    rpc GetFull (GetFullParam) returns (GetFullResponse);
    rpc GetMessagesList (GetMessagesListParam) returns (GetMessagesListResponse); // posts?
    rpc GetMediaList (GetMediaListParam) returns (GetMediaListResponse);
    rpc GetAuthors (GetAuthorsParam) returns (GetAuthorsResponse);
    rpc GetFollowers (GetFollowersParam) returns (GetFollowersResponse);
    rpc GetFollowings (GetFollowingsParam) returns (GetFollowingsResponse);
    rpc GetSubscribers (GetSubscribersParam) returns (GetSubscribersResponse);
    rpc Blocked (BlockedParam) returns (BlockedResponse);

    // Deprecated
    rpc SetDraft (SetDraftParam) returns (SetDraftResponse); // draft via direct

}

// CrDU
message CreateChannelParam {
    uint32 group_id = 1;
}

message CreateChannelResponse {

}

message EditChannelParam {
    uint32 group_id = 1;
}

message EditChannelResponse {

}

message DeleteChannelParam {
    uint32 group_id = 1;
}

message DeleteChannelResponse {

}

// Author
message AddAuthorParam {
}

message AddAuthorResponse {
}

message ChangeAuthorPermissionParam {
}

message ChangeAuthorPermissionResponse {
}

message RemoveAuthorParam {
}

message RemoveAuthorResponse {
}

// Follow
message FollowChannelParam {
}

message FollowChannelResponse {
}

message UnFollowChannelParam {
}

message UnFollowChannelResponse {
}

message RemoveFollowersParam {
}

message RemoveFollowersResponse {
}

// Subscribe

message SubscribeParam {
}

message SubscribeResponse {
}

message UnSubscribeParam {
}

message UnSubscribeResponse {
}

message RemoveSubscribersParam {
}

message RemoveSubscribersResponse {
}

// Privacy

message ChangePrivacyParam {
    uint32 group_id = 1;
}

message ChangePrivacyResponse {

}

message ChangeDefaultPermissionParam {
}

message ChangeDefaultPermissionResponse {
}

message RevokeLinkParam {
}

message RevokeLinkResponse {
}

message ChangeUsernameParam {
}

message ChangeUsernameResponse {
}

message BlockChannelParam {
}

message BlockChannelResponse {
}

// Messages

message DeleteMessagesParam {
    uint32 group_id = 1;
}

message DeleteMessagesResponse {

}

message ClearHistoryParam {
}

message ClearHistoryResponse {
}

// Others

message AvatarChangeParam {
}

message AvatarChangeResponse {
}

message SendDoingActionParam {
}

message SendDoingActionResponse {
}

message ReportChannelParam {
}

message ReportChannelResponse {
}

message ReportMessageParam {
}

message ReportMessageResponse {
}

// Views

message GetFullParam {
}

message GetFullResponse {
}

message GetMessagesListParam {
}

message GetMessagesListResponse {
}

message GetMediaListParam {
}

message GetMediaListResponse {
}

message GetAuthorsParam {
}

message GetAuthorsResponse {
}

message GetFollowersParam {
}

message GetFollowersResponse {
}

message GetFollowingsParam {
}

message GetFollowingsResponse {
}


message GetSubscribersParam {
}

message GetSubscribersResponse {
}


message BlockedParam {
}

message BlockedResponse {
}


// Dep

/*

message Param {
}

message Response {
}

*/

















